objects/DMAPP__DM_Political_Map_Influence2__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing influence relationships between contacts on the Political Map assocaited with an Opportunity</description>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Political Map Influences</relationshipLabel>
        <relationshipName>Political_Map_Influences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Influenced_Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Influenced</label>
        <referenceTo>DMAPP__DM_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Political Map Influences (Influenced)</relationshipLabel>
        <relationshipName>Political_Map_Influences1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Influencing_Contact__c</fullName>
        <label>Influencer</label>
        <referenceTo>DMAPP__DM_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Political Map Influences</relationshipLabel>
        <relationshipName>Influences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Political Map Influence</label>
    <nameField>
        <label>Political Map Influence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Political Map Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>